--- a/card.html
+++ b/card.html
@@ -46,31 +46,31 @@
       <div class="absolute inset-0 -right-20 -top-4 container mx-auto max-w-sm">
       <div class="relative">
       <img class="w-lg brightness-70" src="0.png" alt="Profile image" />
-          
+      <button type="button" class="absolute text-4xl text-gray-400 right-7 top-5 mb-16 hover:text-slate-700">⨉</button>   
           <div class="text-center absolute w-full" style="bottom: 1rem">
             <p class="text-white text-2xl font-bold" style="bottom: 2rem">Avril Lalaine Linaza</p>
             <p class="text-gray-400 text-lg font-bold">Tupi, S.C</a></p>
-            <div class="py-6 grid grid-cols-3 divide-x">
-             <div class="posts">
+          <div class="py-6 grid grid-cols-3 divide-x">
+          <div class="posts">
                  <p class="text-gray-400 text-sm hover:text-white">Likes</p>
                  <p class="text-white text-lg font-bold">8975</p>
-              </div>
+          </div>
               <div class="followers">
                  <p class="text-gray-400 text-sm hover:text-white">Following</p>
                  <p class="text-white text-lg font-bold">397</p>
-              </div>
-              <div class="following">
+          </div>
+          <div class="following">
                  <p class="text-gray-400 text-sm hover:text-white">Followers</p>
                  <p class="text-white text-lg font-bold">1343</p>
-              </div>
-              </div>     
-              </div>
-              </div>
-              <div class="py-5 bg-green-300 justify-center">
-                <button type="button" class="w-full p-2 text-2xl text-white font-bold text-center"> <a class="hover:text-gray-700" href="" target="_blank">Follow</a></button>                 
-              </div>
-              </div>
-              </div>
-              </div>
+          </div>
+          </div>     
+          </div>
+          </div>
+          <div class="py-5 bg-green-300 justify-center">
+          <button type="button" class="w-full p-2 text-2xl text-white font-bold text-center"> <a class="hover:text-gray-700" href="" target="_blank">Follow</a></button>                 
+          </div>
+          </div>
+          </div>
+          </div>
 </body>
 </html>
