--- a/ProfileCard.html
+++ b/ProfileCard.html
@@ -5,6 +5,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
       <script src="https://cdn.tailwindcss.com"></script>
       <title> Prelim Card </title>
+      <link rel="icon" href="https://th.bing.com/th/id/OIP.TslY_euVT0J5fBFuE24swAHaHa?pid=ImgDet&rs=1" type="image/icon type">
 </head>
    
 <body class="bg-gray-500" >
@@ -16,15 +17,15 @@
       <p class="text-white text-2xl font-bold">Uchiha Sasuke</p>
       <p class="text-gray-400 text-lg font-bold"><a class="hover:text-white" href="https://goo.gl/maps/q12tMAXy26eozJRw6" target="_blank">Konoha, JP</a></p>
    <div class="py-6 grid grid-cols-3 divide-x">
-   <div class="posts">
+   <div class="likes">
       <p class="text-gray-400 text-sm">Likes</p>
       <p class="text-white text-lg font-bold hover:text-gray-500">11.5M</p>
    </div>
-   <div class="followers">
+   <div class="following">
       <p class="text-gray-400 text-sm">Following</p>
       <p class="text-white text-lg font-bold hover:text-gray-500">29</p>
    </div>
-   <div class="following">
+   <div class="followers">
       <p class="text-gray-400 text-sm">Followers</p>
       <p class="text-white text-lg font-bold hover:text-gray-500">17.5M</p>
    </div>
@@ -47,15 +48,15 @@
          <p class="text-white text-2xl font-bold">Avril Lalaine Linaza</p>
          <p class="text-gray-400 text-lg font-bold"><a class="hover:scale-110 hover:text-white transition duration-300 ease-in-out" href="https://goo.gl/maps/drVn8p8LZEk74pds5" target="_blank">Tupi, S.C</a></p>
       <div class="py-6 grid grid-cols-3 divide-x">
-      <div class="posts">
+      <div class="likes">
          <p class="text-gray-400 text-sm">Likes</p>
          <p class="text-white text-lg font-bold hover:text-gray-400">8975</p>
       </div>
-      <div class="followers">
+      <div class="following">
          <p class="text-gray-400 text-sm">Following</p>
          <p class="text-white text-lg font-bold hover:text-gray-400">397</p>
       </div>
-      <div class="following">
+      <div class="followers">
          <p class="text-gray-400 text-sm">Followers</p>
          <p class="text-white text-lg font-bold  hover:text-gray-400">1343</p>
       </div>
