--- a/ProfileCard.html
+++ b/ProfileCard.html
@@ -7,7 +7,6 @@
       <title> Prelim Card </title>
       <link rel="icon" href="https://th.bing.com/th/id/OIP.TslY_euVT0J5fBFuE24swAHaHa?pid=ImgDet&rs=1" type="image/icon type">
 </head>
-   
 <body class="bg-gray-500" >
    <div class="h-screen mx-auto w-50 h-90 justify-center items-center">
    <div class=" relative -bottom-10 -left-10 container mx-auto max-w-sm shadow-2xl">
@@ -40,7 +39,7 @@
    </div>
 
    <div class=" min-h-screen justify-center items-center">
-      <div class="absolute inset-0 -right-20 -top-4 container mx-auto max-w-sm">
+      <div class="absolute inset-0 -right-20 -top- m4 container mx-auto max-w-sm">
       <div class="relative">
       <img class="w-lg brightness-70" src="0.png" alt="Profile image" />
       <button type="button" class="absolute text-4xl text-gray-400 right-7 top-5 mb-16 hover:scale-110 hover:text-white transition duration-300 ease-in-out">⨉</button>    
